--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -12,7 +12,7 @@
   <%= f.text_area:description %>
   <br>
 
-  <%= f.submmit "Submit", :disable_with => 'Submiting...' %>
+  <%= f.submit "Submit", :disable_with => 'Submiting...' %>
   <% end %>
 
 </div>
