--- a/app/views/account/groups/index.html.erb
+++ b/app/views/account/groups/index.html.erb
@@ -1,25 +1,25 @@
 <div class="col-md-12">
-  <h2 class="text-center"> 我加入的讨论版</h2>
+  <h2 class="text-center"> 我加入的讨论</h2>
 
   <table class="table">
     <thread>
       <tr>
-        <th>#</th>
+        <th> # </th>
         <th> Title</th>
         <th> Description </th>
         <th> Post Count </th>
         <th> Last Update</th>
-        <tr>
-        </thread>
+      </tr>
+    </thread>
 
         <tbody>
         <% @groups.each do |group| %>
         <tr>
-          <td> # <td>
-            <td> <%= link_to(group.title, group_path(group)) %></td>
+          <td> # </td>
+  <td> <%= link_to(group.title, group_path(group)) %> </td>
             <td> <%= group.description %></td>
             <td> <%= group.posts.count %></td>
-            <td> <%- group.updated_at %></td>
+            <td> <%= group.updated_at %></td>
           </tr>
           <% end %>
         </tbody>
